# fasths

./: .gitignore  FAST.hs  FParser.hs  FStream.hs  LICENSE  README.md  TODO.otl  TemplateParser.hs  fast.cabal  fasths.cabal
Codec/: Fast.hs
Codec/Fast/: Coparser.hs  Data.hs  Parser.hs  Pretty.hs  TemplateParser.hs
Codec/Fast/Test/: Data.hs
examples/: parseFile.hs  templates.xml
src/Codec/: Fast.hs
src/Codec/Fast/: Data.hs  Decoder.hs  Encoder.hs  Parser.hs  Pretty.hs  TemplateParser.hs
src/Codec/Fast/Test/: Data.hs
src/examples/: parseFile.hs
src/test/: runTest.hs
test/: runTest.hs  templates.xml
testsuite/: runTest.hs
