Name:                fast
Version:             0.0
Description:         FAST parser
License:             BSD3
Author:              Robin S. Krom
Maintainer:          Robin S. Krom
Build-Type:          Simple
Cabal-Version:       >=1.8

Library 
  Build-Depends:     base >= 3 && < 5, containers, mtl, bytestring, attoparsec, ListLike, utf8-string, hxt

  Exposed-modules:   Codec.Fast Codec.Fast.Data Codec.Fast.Parser Codec.Fast.TemplateParser 
  ghc-options:       -O -Wall -rtsopts 

Executable parseFile
  Main-is: 	     examples/parseFile.hs
  Build-Depends:     base >= 3 && < 5, containers, mtl, bytestring, attoparsec, ListLike, utf8-string, hxt
  ghc-options:       -O -Wall -rtsopts 
  
