Name:                fasths
Version:             0.1
Synopsis:            A decoder/encoder library for the FAST protocoll.
Description:         A decoder/encoder library for the FAST protocoll.
Homepage:            www.github.com/RobinKrom/fasths
License:             BSD3
License-file:        LICENSE
Author:              Robin S. Krom
Maintainer: 	     Robin S. Krom
Category:            Codec
Build-type:          Simple
Cabal-version:       >=1.8

Test-Suite simple-testsuite
  Type: exitcode-stdio-1.0
  Main-is: Test/runTest.hs
  Hs-Source-Dirs:	src
  Build-depends: base, QuickCheck, bytestring, mtl, binary, attoparsec, containers, ListLike, hxt

Library
  Build-Depends:	base, QuickCheck, bytestring, binary, mtl, attoparsec, containers, ListLike, hxt
  Exposed-modules:	Codec.Fast
  Hs-Source-Dirs:	src
  Other-modules:  Codec.Fast.Encoder, Codec.Fast.Decoder, Codec.Fast.Pretty, Codec.Fast.TemplateParser, Codec.Fast.Test.Data

source-repository head
  type: 	git
  location: http://github.com/RobinKrom/fasths


--Executable parseFile
--  Main-Is:	examples/parseFile.hs
--  Hs-Source-Dirs:	src
--  Build-Depends: base, fasths, mtl, attoparsec, hxt, bytestring, QuickCheck, binary, containers, ListLike
