Name:                fasths
Version:             0.1
Synopsis:            A decoder/encoder library for the FAST protocoll.
Description:         A decoder/encoder library for the FAST protocoll.
Homepage:            www.github.com/RobinKrom/fasths
License:             BSD3
License-file:        LICENSE
Author:              Robin S. Krom
Maintainer: 	     Robin S. Krom
Category:            Codec
Build-type:          Simple
Cabal-version:       >=1.8
Tested-with:         GHC==7.4.1

Test-Suite simple-testsuite
  Type: exitcode-stdio-1.0
  Main-is: runTest.hs
  Hs-Source-Dirs: testsuite	
  Build-depends: base >= 3 && < 5, QuickCheck, bytestring, mtl, binary, attoparsec, containers, ListLike, hxt

Library
  Build-Depends:	base >=3 && < 5, QuickCheck, bytestring, binary, mtl, attoparsec, containers, ListLike, hxt
  Exposed-modules:	Codec.Fast
  Hs-Source-Dirs:	src
  Other-modules:  Codec.Fast.Data, Codec.Fast.Encoder, Codec.Fast.Decoder, Codec.Fast.Pretty, Codec.Fast.TemplateParser, Codec.Fast.Test.Data

source-repository head
  type: 	git
  location: http://github.com/RobinKrom/fasths

Executable parseFile
  Main-Is: parseFile.hs
  Hs-Source-Dirs: examples
  Build-Depends: base >=3 && < 5, fasths, mtl, attoparsec, hxt, bytestring, QuickCheck, binary, containers, ListLike
